# AsterDrive

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  README.zh.md  SECURITY.md  build.rs  config.example.toml  docker-compose.yml
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: config.yml  question.yml
.github/workflows/: docker-image.yml  docs-check.yml  docs-deploy.yml  frontend-e2e.yml  frontend.yml  rust-release.yml  rust.yml  vitepress.yml
benches/: path_hotspots.rs
developer-docs/: README.md  architecture.md  module-designs.md
developer-docs/api/: admin.md  auth.md  batch.md  files.md  index.md  internal-storage.md  public.md  shares.md  tasks.md  teams.md  trash.md  webdav.md
developer-docs/en/: README.md  architecture.md  external-auth.md  jemalloc-profiling.md  module-designs.md  storage-descriptor-normalization-contract.md  testing.md
developer-docs/zh-CN/: README.md  architecture.md  backend-service-ownership.md  external-auth.md  jemalloc-profiling.md  module-designs.md  remote-storage-target-policy-ownership.md  storage-descriptor-normalization-contract.md  testing.md  upload-finalization-contracts.md
docs/: astro.config.mts  index.md  package.json
docs/.vitepress/: config.ts
docs/config/: auth.md  cache.md  config-sync.md  external-auth.md  index.md  logging.md  mail.md  offline-download.md  runtime.md  server.md  storage.md  webdav.md
docs/deployment/: capacity-planning.md  docker-follower.md  docker.md  follower-network-topologies.md  index.md  ops-cli.md  performance-benchmarking.md  production-checklist.md  reverse-proxy.md  runtime-behavior.md  systemd.md  troubleshooting.md  upgrade.md
docs/en/: index.md
docs/features/: auth-access.md  files-workspaces.md  index.md  preview-processing.md  runtime-operations.md  upload-storage.md
docs/guide/: about.md  admin-console.md  architecture.md  core-workflows.md  custom-frontend.md  docs-contributing.md  errors.md  faq.md  getting-started.md  glossary.md  index.md  installation.md  preview-and-wopi.md  remote-nodes.md  teams-and-permissions.md  upload-modes.md  user-guide.md
docs/public/: robots.txt
docs/scripts/: check-error-codes.mjs
docs/src/: content.config.ts  routeMiddleware.ts
docs/storage/: azure-blob.md  index.md  local.md  onedrive.md  remote-follower.md  s3-minio-r2.md  sftp.md  tencent-cos.md
frontend-panel/: AGENTS.md  biome.json  package.json  playwright.config.ts  vite.config.ts
frontend-panel/e2e/: 00-auth.spec.ts  admin.spec.ts  file-browser.spec.ts  public-custom-config.spec.ts  settings.spec.ts  webdav.spec.ts
frontend-panel/scripts/: audit-startup.mjs
frontend-panel/src/: App.test.tsx  App.tsx  index.css
migration/: Cargo.toml  README.md
migration/src/: index_helpers.rs  legacy.rs  lib.rs  m20260511_000001_add_background_task_failure_can_retry.rs  m20260512_000001_baseline_schema.rs  m20260515_000001_add_passkeys.rs  m20260518_000001_add_file_type_filters.rs  m20260519_000001_expand_background_task_display_name.rs  m20260528_000001_add_storage_migration_opaque_rename_count.rs  m20260529_000001_add_remote_node_transport.rs  m20260530_000001_add_webdav_account_team_scope.rs  m20260601_000001_add_system_config_visibility.rs  m20260601_000002_add_background_task_runtime_json.rs  m20260604_000001_allow_shared_webdav_locks.rs  m20260606_000001_add_external_auth_provider_options.rs  m20260704_000001_rename_managed_ingress_profiles_to_remote_storage_targets.rs  m20260704_000002_add_remote_storage_target_key_to_storage_policies.rs  m20260705_000001_drop_remote_storage_target_max_file_size.rs  m20260712_000002_add_forge_audit_query_indexes.rs  m20260712_000003_align_forge_system_config_contract.rs  m20260713_000002_background_task_dedupe_key.rs  m20260713_000003_scheduled_tasks.rs  m20260717_000001_add_upload_session_kind.rs  m20260719_000001_add_upload_provider_session.rs
src/: alloc.rs  errors.rs  lib.rs  main.rs  metrics.rs  types.rs
src/api/: api_error_code.rs  common.rs  error_code.rs  mod.rs  openapi.rs  pagination.rs  primary.rs  response.rs  subcode.rs
src/cli/: config.rs  database_migration.rs  db_shared.rs  mod.rs  node.rs  shared.rs
src/config/: audit.rs  auth_runtime.rs  avatar.rs  branding.rs  cors.rs  definitions.rs  loader.rs  local_email_policy.rs  mail.rs  mod.rs  offline_download.rs  operations.rs  paths.rs  runtime_config.rs  schema.rs  site_url.rs  system_config.rs  wopi.rs
src/db/: connection.rs  mod.rs
src/entities/: background_task.rs  external_auth_provider.rs  file.rs  folder.rs  managed_follower.rs  managed_ingress_profile.rs  master_binding.rs  mod.rs  passkey.rs  remote_storage_target.rs  storage_migration_checkpoint.rs  storage_policy.rs  system_config.rs  upload_session.rs  webdav_account.rs
src/external_auth/: registry.rs
src/runtime/: components.rs  logging.rs  mod.rs  panic.rs  shutdown.rs  tasks.rs
src/services/: admin_file_service.rs  admin_service.rs  archive_preview_service.rs  audit_service.rs  direct_link_service.rs  file_service.rs  health_service.rs  lock_service.rs  mail_outbox_service.rs  mail_template.rs  maintenance_service.rs  managed_follower_enrollment_service.rs  managed_follower_service.rs  master_binding_service.rs  media_metadata_service.rs  mod.rs  (+15 more)
tests/: generate_openapi.rs  test_admin.rs  test_archive_preview.rs  test_audit.rs  test_auth.rs  test_azure_blob.rs  test_batch.rs  test_branding.rs  test_cache.rs  test_cli.rs  test_cors.rs  test_database_backends.rs  test_db_indexes.rs  test_directory_upload.rs  test_edit.rs  test_files.rs  test_folders.rs  test_gravatar_config.rs  test_health.rs  test_local_driver_security.rs  test_mail_services.rs  test_maintenance.rs  test_media_metadata.rs  test_mfa.rs  test_middleware.rs  test_migrations.rs  test_oauth2.rs  test_oidc.rs  test_pagination.rs  test_policies.rs  test_preferences.rs  test_properties.rs  test_public_custom_config.rs  test_public_media_data_support.rs  test_public_preview_apps.rs  test_public_thumbnail_support.rs  test_remote_enrollment.rs  test_remote_storage.rs  test_s3.rs  test_schema_drift.rs  (+24 more)
(+1438 files in other folders)
