[package]
name = "aster_drive"
version = "0.2.0"
description = "A self-hosted cloud storage solution."
authors = [
    "AptS-1547 <apts-1547@esaps.net>",
    "AptS-1548 <apts-1548@esaps.net>",
    "AptS-1738 <apts-1738@esaps.net>",
]
repository = "https://github.com/AptS-1547/AsterDrive"
license = "MIT"
edition = "2024"
rust-version = "1.91.1"

# 优化配置
[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
panic = "unwind"
strip = false
incremental = true

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"
strip = true

# 压测/火焰图采样用：接近 release，但保留符号并关闭 LTO，方便 perf 展开栈。
# frame pointer 需要通过 RUSTFLAGS 传入：
# RUSTFLAGS="-C force-frame-pointers=yes" cargo build --profile profiling
[profile.profiling]
inherits = "release"
opt-level = 2
codegen-units = 1
debug = true
strip = false
lto = false
panic = "abort"

[profile.release-performance]
inherits = "release"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[workspace]
members = [".", "migration", "api-docs-macros"]

[features]
default = ["server", "cli"]
server = []
cli = ["server", "dep:clap"]
metrics = ["server", "dep:prometheus", "dep:sysinfo"]
openapi = ["dep:utoipa", "dep:utoipa-swagger-ui", "api-docs-macros/openapi"]
full = ["server", "cli", "metrics", "openapi"]

[dependencies]
actix-governor = "0.10"
actix-http = "3"
actix-multipart = "0.7"
actix-web = { version = "4.13.0", features = ["compress-brotli", "compress-gzip"] }
aes-gcm = "0.10"
api-docs-macros = { path = "api-docs-macros" }
argon2 = "0.5.3"
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
aws-credential-types = { version = "1.2.14", features = ["hardcoded-credentials"] }
aws-sdk-s3 = { version = "1.133.0", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
aws-smithy-http = "0.63"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive", "env"], optional = true }
config = { version = "0.15", default-features = false, features = ["toml"] }
dashmap = "6"
data-encoding = "2.11"
dotenvy = "0.15"
encoding_rs = "0.8"
oem_cp = "2"
futures = "0.3"
hex = "0.4"
hkdf = "0.12"
hmac = "0.13"
http = "1"
http-body = "1"
image = { version = "0.25", default-features = false, features = ["bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"] }
governor = "0.10"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
migration = { version = "0.1.0", path = "migration" }
mime_guess = "2"
moka = { version = "0.12.15", features = ["future"] }
md-5 = "0.11.0"
num_cpus = "1.17.0"
nom-exif = "3.4.2"
parking_lot = "0.12"
paste = "1.0.15"
percent-encoding = "2.3"
openidconnect = "4.0.1"
prometheus = { version = "0.14", optional = true, default-features = false }
sysinfo = { version = "0.38", optional = true, default-features = false, features = ["system"] }
rand = { version = "0.10.1", default-features = false, features = ["std", "std_rng", "thread_rng"] }
redis = { version = "1.2.1", features = ["connection-manager", "tokio-comp", "tokio-rustls-comp"] }
reqwest = { version = "0.13", features = ["stream", "json"] }
rsa = "0.9.10"
rust-embed = "8"
sea-orm = { version = "~2.0.0-rc.38", features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "macros", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
sha1 = "0.11"
sha2 = "0.11"
sha2_10 = { package = "sha2", version = "0.10" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
toml = "1.1"
toml_edit = "0.25"
tiff = "0.11.3"
tracing = { version = "0.1.44", default-features = false}
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["ansi", "env-filter", "fmt", "json"] }
unicode-normalization = "0.1"
utoipa = { version = "5.5.0", features = ["chrono", "actix_extras", "repr"], optional = true }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"], optional = true }
urlencoding = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
validator = { version = "0.20", features = ["derive"] }
webauthn-rs = { version = "0.6.1-dev", default-features = false, features = ["conditional-ui", "danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.6.1-dev"
xmltree = "0.12"
zip = { version = "8", default-features = false, features = ["deflate"] }
ipnet = "2.12.0"
lofty = "0.24.0"

[dev-dependencies]
aws-smithy-http-client = { version = "1.1.12", features = ["test-util"] }
aws-smithy-types = "1.4.8"
fs2 = "0.4"
quick-xml = "0.38"
testcontainers = { version = "0.27", features = ["reusable-containers"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
webauthn-authenticator-rs = { version = "0.6.1-dev", features = ["softpasskey"] }

[build-dependencies]
chrono = "0.4"

[lib]
doctest = false
