[package]
name = "aster_drive"
version = "0.3.2"
description = "A self-hosted cloud storage solution."
authors = [
    "AptS-1547 <apts-1547@esaps.net>",
    "AptS-1548 <apts-1548@esaps.net>",
    "AptS-1738 <apts-1738@esaps.net>",
    "AptS-1543 <apts-1543@esaps.net>",
]
repository = "https://github.com/AsterCommunity/AsterDrive"
license = "MIT"
edition = "2024"
rust-version = "1.95.0"

# 优化配置
[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
panic = "unwind"
strip = false
incremental = true

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"
strip = true

# 压测/火焰图采样用：接近 release，但保留符号并关闭 LTO，方便 perf 展开栈。
# frame pointer 需要通过 RUSTFLAGS 传入：
# RUSTFLAGS="-C force-frame-pointers=yes" cargo build --profile profiling
[profile.profiling]
inherits = "release"
opt-level = 2
codegen-units = 1
debug = true
strip = false
lto = false
panic = "abort"

[profile.release-performance]
inherits = "release"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[workspace]
members = [".", "migration"]

[features]
default = ["server", "cli"]
server = []
cli = ["server", "dep:clap"]
metrics = [
    "server",
    "aster_forge_actix_observability/prometheus",
    "aster_forge_metrics/allocator-metrics",
    "aster_forge_metrics/backend-prometheus",
]
openapi = [
    "dep:utoipa",
    "dep:utoipa-swagger-ui",
    "aster_forge_api/openapi",
    "aster_forge_api_docs_macros/openapi",
]
full = ["server", "cli", "metrics", "openapi"]
jemalloc = ["dep:tikv-jemallocator", "aster_forge_alloc/jemalloc"]
jemalloc-stats = [
    "jemalloc",
    "tikv-jemallocator/stats",
    "aster_forge_alloc/jemalloc-stats",
]
jemalloc-profiling = ["jemalloc-stats", "tikv-jemallocator/profiling"]

[dependencies]
actix-governor = "0.10"
actix-http = "3"
actix-multipart = "0.8"
actix-web = { version = "4.14.0", features = ["compress-brotli", "compress-gzip"] }
actix-ws = "0.4"
aes-gcm = "0.11"
aster_forge_api = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_api" }
aster_forge_api_docs_macros = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_api_docs_macros" }
aster_forge_actix_middleware = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_actix_middleware", features = ["metrics"] }
aster_forge_actix_observability = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_actix_observability" }
aster_forge_alloc = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_alloc" }
aster_forge_cache = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_cache", features = ["memory", "redis", "runtime-component"] }
aster_forge_logging = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_logging" }
aster_forge_metrics = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_metrics" }
aster_forge_panic = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_panic" }
argon2 = "0.5.3"
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
aws-credential-types = { version = "1.3.0", features = ["hardcoded-credentials"] }
aws-sdk-s3 = { version = "1.138.0", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
aws-smithy-http = "0.64"
azure_core = { version = "1.1.0", default-features = false, features = ["hmac_rust", "reqwest_rustls", "tokio"] }
azure_storage_blob = { version = "1.0.0", default-features = false, features = ["tokio"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive", "env"], optional = true }
config = { version = "0.15", default-features = false, features = ["toml"] }
dashmap = "6"
data-encoding = "2.11"
dotenvy = "0.15"
encoding_rs = "0.8"
oem_cp = "2"
futures = "0.3"
fs2 = "0.4"
hex = "0.4"
hkdf = "0.13"
hmac = "0.13"
http = "1"
http-body = "1"
image = { version = "0.25", default-features = false, features = ["bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"] }
governor = "0.10"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
migration = { version = "0.1.0", path = "migration" }
mime_guess = "2"
moka = { version = "0.12.15", features = ["future"] }
md-5 = "0.11.0"
num_cpus = "1.17.0"
nom-exif = "3.6.1"
parking_lot = "0.12"
paste = "1.0.15"
percent-encoding = "2.3"
openidconnect = "4.0.1"
rand = { version = "0.10.2", default-features = false, features = ["std", "std_rng", "thread_rng"] }
reqwest = { version = "0.13", features = ["stream", "json"] }
ring = "0.17"
rust-embed = "8"
sea-orm = { version = "2.0.0-rc.42", features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "macros", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_repr = "0.1.20"
secrecy = "0.10"
sha1 = "0.11"
sha2 = "0.11"
russh = "0.62.2"
russh-sftp = "2.3.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
toml = "1.1"
toml_edit = "0.25"
tiff = "0.11.3"
tikv-jemallocator = { version = "0.7", optional = true }
tracing = { version = "0.1.44", default-features = false}
unicode-normalization = "0.1"
utoipa = { version = "5.5.0", features = ["chrono", "actix_extras", "repr"], optional = true }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"], optional = true }
urlencoding = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
validator = { version = "0.20", features = ["derive"] }
webauthn-rs = { version = "0.6.1-dev", default-features = false, features = ["conditional-ui", "danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.6.1-dev"
xmltree = "0.12"
zip = { version = "8", default-features = false, features = ["deflate"] }
ipnet = "2.12.0"
lofty = "0.24.0"

[dev-dependencies]
aws-smithy-http-client = { version = "1.2.0", features = ["test-util"] }
aws-smithy-types = "1.6.1"
criterion = "0.8"
rsa = "0.10.0-rc.18"
testcontainers = { version = "0.27", features = ["reusable-containers"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["ansi", "env-filter", "fmt", "json"] }
webauthn-authenticator-rs = { version = "0.6.1-dev", features = ["softpasskey"] }

[build-dependencies]
chrono = "0.4"

[lib]
doctest = false

[[bench]]
name = "path_hotspots"
harness = false
