[package]
name = "migration"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[features]
default = []
cli = ["sea-orm-migration/cli"]

[lib]
name = "migration"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "migration"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
aster_forge_db = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_db", features = ["audit-log", "mail-outbox", "runtime-lease", "scheduled-task", "system-config"] }
aster_forge_file_classification = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_file_classification" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = { version = "0.1.44", default-features = false }

[dependencies.sea-orm-migration]
version = "2.0.0-rc.42"
default-features = false
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "sqlx-postgres",         # `DATABASE_DRIVER` feature
  "sqlx-mysql",
  "sqlx-sqlite",
]
